# pazzle-game

./: .gitignore  AGENTS.md  BUILD_RUST.bat  CHANGELOG.md  Cargo.toml  GIT_КОМАНДЫ.bat  LICENSE  README.md  README_BUILD.md  README_GITHUB.md  RUST_BUILD.md  RUST_ВЕРСИЯ.md  TECHNICAL_ASSET_INTEGRATION.md  VERSION.txt  build_exe.bat  current_task.md  package.json  requirements.txt  БЫСТРЫЙ_СТАРТ.txt  ВИЗУАЛЬНАЯ_НОВЕЛЛА.md  ДЛЯ_РАЗРАБОТЧИКА.md  ЗАПУСК_СБОРКИ.bat  ИНСТРУКЦИЯ.md  ИТОГИ_RUST_ПОРТИРОВАНИЯ.md  ИТОГИ_ОБНОВЛЕНИЯ_v1.2.0.md  ИТОГОВАЯ_СВОДКА.md  КОМАНДЫ.bat  НАВИГАЦИЯ.md  НОВЫЕ_ГОЛОВОЛОМКИ.md  О_ПРОЕКТЕ.md  ОБНОВЛЕНИЕ_ГОЛОВОЛОМОК.md  ПРИМЕРЫ_МОДИФИКАЦИЙ.md  СПРАВКА.md  ТЕСТ_НОВЫХ_ГОЛОВОЛОМОК.bat  очистка.bat
docs/: DEVELOPER_CHECKLIST.md  DOCUMENTATION_INDEX.md  INTERLEVEL_PLATFORMER.md  MUSIC_QUICK_REFERENCE.md  README.md  SEQUENTIAL_LEVEL_TRANSITIONS.md  TESTING.md  UNIT_TESTS.md  achievements_system.md  asset_integration_plan.md  audio_dramaturgy_guide.md  audio_enhancement_plan.md  audio_system_guide.md  cave_assets_3_6_guide.md  cave_assets_7_12_guide.md  cave_assets_plan.md  deltarune_mechanics_integration_plan.md  gamemaker_migration_plan.md  gamemaker_project_structure.md  gms2_architecture.md  gms2_asset_migration_technical_spec.md  gms2_testing_strategy.md  gms2_unit_test_scenarios.md  gms_architecture.md  levels_7_12_guide.md  migration_guide.md  migration_tz.md  music_themes_config.md  quick_asset_integration_guide.md  rust_to_gms2_port_plan.md  thematic_assets_guide.md  vn_system_integration.md  vn_system_plan.md
memory_bank/: AGENTS.md  progress.md  (+5 more)
(+258 files in other folders)
