[package]
name = "adventure_puzzle_game"
version = "1.2.0"
edition = "2021"
authors = ["Adventure Game Team"]

[dependencies]
# Игровой движок
macroquad = { version = "0.4", features = ["audio"] }
# Сериализация для сохранений
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Рандом
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "game"
path = "src_rust/main.rs"
